Updated the description in each works. Fix alignemnt and paddings.

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -22,11 +22,13 @@ body {
     font-family: $fontBody;
     font-size: $fontSize;
     color: $darkGray;
+    
 }
 
 
 h1, h2, h3 {
     font-family: $fontHeading;
+    margin: 0
 }
 
 h1 {
@@ -35,6 +37,7 @@ h1 {
 
 h2 {
     font-size: 2rem;
+    margin-bottom: 1rem;
 }
 
 p {
@@ -43,7 +46,6 @@ p {
     font-size: 1.2rem;
     font-weight: 300;
     line-height: 1.9;
-
 }
 
 button, .button {
@@ -76,7 +78,7 @@ a {
     border: 0.1rem solid $darkCyan;
     color: $white;
     font-weight: 400;
-    font-size: 1.2rem;
+    font-size: 1rem;
     transition: all 150ms ease-in-out;
 
     &:hover {
